# gosh-dl

./: .gitignore  BUILDING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  recursive_http_checklist.md  recursive_http_design.md  technical_spec.md
.github/workflows/: ci.yml
examples/: http_download.rs  magnet_smoke.rs  progress_display.rs  torrent_download.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bencode.rs  fuzz_content_disposition.rs  fuzz_magnet.rs  fuzz_metainfo.rs
src/: config.rs  engine.rs  error.rs  lib.rs  priority_queue.rs  scheduler.rs  types.rs
src/http/: checksum.rs  connection.rs  crawl.rs  mirror.rs  mod.rs  resume.rs  segment.rs
src/protocol/: checksum.rs  error.rs  events.rs  mod.rs  options.rs  recursive.rs  scheduler.rs  status.rs  torrent.rs  types.rs
src/storage/: mod.rs  sqlite.rs
src/torrent/: bencode.rs  choking.rs  dht.rs  lpd.rs  magnet.rs  metadata.rs  metainfo.rs  mod.rs  mse.rs  peer.rs  pex.rs  piece.rs  tracker.rs  transport.rs  webseed.rs
src/torrent/utp/: congestion.rs  mod.rs  multiplexer.rs  packet.rs  socket.rs  state.rs
tests/: integration_tests.rs  mock_peer.rs  test_helpers.rs  torrent_integration_tests.rs
